# zerocopy-protobuf

./: README.md
bazel/buildifier_prebuilt/: repositories.bzl
iceoryx_binding_c/source/: c_publisher.cpp  c_subscriber.cpp
iceoryx_binding_c/test/moduletests/: test_client.cpp  test_listener.cpp
iceoryx_examples/: README.md
iceoryx_examples/protobuf/: CMakeLists.txt  README.md  person.pb.cc  person.pb.h  person.proto  protobuf_non_zero_copy_publisher.cpp  protobuf_non_zero_copy_subscriber.cpp  protobuf_zero_copy_publisher.cpp  protobuf_zero_copy_subscriber.cpp
iceoryx_meta/: CMakeLists.txt
iceoryx_posh/: CMakeLists.txt
iceoryx_posh/cmake/protobuf/: CMakeLists.txt
iceoryx_posh/include/iceoryx_posh/internal/mepoo/: chunk_management_management.hpp  memory_manager.hpp  shared_multi_chunk.hpp  shm_safe_unmanaged_multi_chunk.hpp
iceoryx_posh/include/iceoryx_posh/internal/popo/: base_subscriber.hpp  base_subscriber.inl  publisher_impl.hpp  publisher_impl.inl  subscriber_impl.hpp  subscriber_impl.inl  untyped_publisher_impl.inl  untyped_subscriber_impl.inl  used_chunk_list.hpp  used_chunk_list.inl
iceoryx_posh/include/iceoryx_posh/mepoo/: chunk_header.hpp
iceoryx_posh/include/iceoryx_posh/popo/: publisher.hpp
iceoryx_posh/protobuf-3.19.3/: Android.bp  post_process_dist.sh  tests.sh
iceoryx_posh/protobuf-3.19.3/cmake/: CMakeLists.txt  install.cmake
iceoryx_posh/protobuf-3.19.3/kokoro/linux/aarch64/: javascript_build_and_run_tests_with_qemu_aarch64.sh
iceoryx_posh/protobuf-3.19.3/src/google/protobuf/: arena.cc  arena.h  arena_impl.h  arenastring.cc  arenastring.h  descriptor.h  generated_message_reflection.cc  message_lite.h  port_def.inc  repeated_field.h  repeated_ptr_field.h
iceoryx_posh/source/mepoo/: chunk_header.cpp  chunk_management_management.cpp  memory_manager.cpp  mepoo_config.cpp  shared_multi_chunk.cpp  shm_safe_unmanaged_multi_chunk.cpp
iceoryx_posh/source/popo/ports/: client_port_user.cpp  publisher_port_user.cpp  server_port_user.cpp  subscriber_port_user.cpp
iceoryx_posh/source/roudi/: port_manager.cpp
iceoryx_posh/test/integrationtests/: test_popo_chunk_building_blocks.cpp  test_popo_port_user_building_blocks.cpp
(+24 files in other folders)
